# spconv1.0

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  toolchain-windows.txt  windows_TC.cmake
cmake/: Boost.cmake
conda/: README.md  spconv-windows.yml  spconv.yml
docker/: Dockerfile  spconv.yml
include/: torch_utils.h
include/spconv/: box_iou.h  geometry.h  indice.cu.h  indice.h  maxpool.h  mp_helper.h  nms.h  point2voxel.h  pool_ops.h  reordering.cu.h  reordering.h  spconv_ops.h
include/tensorview/: tensorview.h
spconv/: __init__.py  conv.py  ops.py
src/spconv/: CMakeLists.txt  all.cc  indice.cc  indice.cu  maxpool.cc  maxpool.cu  reordering.cc  reordering.cu
src/utils/: CMakeLists.txt  all.cc
test/: CMakeLists.txt  test_conv.py
test/src/: catch_main.cpp  test_conv_rule.cpp
